# cast-it-podcast-builder

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  AI4SE-TeamInformation-08jul26 (1).xlsx  LICENSE  Makefile  README.md  docker-compose.host-access.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  manage.py  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
api/: __init__.py  urls.py
api/v1/: exceptions.py  filters.py  mixins.py  pagination.py  permissions.py  urls.py  views.py
apps/: __init__.py
apps/articles/: admin.py  apps.py  models.py
apps/audio/: admin.py  apps.py  models.py
apps/core/: admin.py  apps.py  models.py  tasks.py
apps/episodes/: admin.py  apps.py  models.py
apps/knowledge/: admin.py  apps.py  models.py
apps/observability/: admin.py  apps.py  middleware.py  models.py
apps/operations/: apps.py  decorators.py  urls.py  views.py
apps/providers/: admin.py  apps.py  models.py
apps/publish/: admin.py  apps.py  (+1 more)
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
docker/: Dockerfile  entrypoint.sh  gunicorn.conf.py  wait-for-services.sh
docs/: 20260713-Cast-It-Hackathon-Pitch.pptx  Cast-It-Architecture.docx  deployment.md  personalized-chapters.md  ~$st-It-Architecture.docx
domain/: __init__.py
infrastructure/: __init__.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: backup-db.sh  build.sh  collectstatic.sh  create-admin.sh  docker-clean-start.ps1  format.sh  generate_architecture_docx.py  get_gmail_token.py  get_youtube_token.py  lint.sh  migrate.sh  morning-catchup.ps1  pipeline-watchdog.ps1  run_daily.py  start-lite.sh  start.sh  stop.sh  test.sh  verify-backup.sh
services/: __init__.py
supabase/: config.toml
tests/: __init__.py  conftest.py  test_celery.py  test_health.py
(+506 files in other folders)
