[project]
name = "cast-it-podcast-builder"
version = "0.1.0"
description = "AI Podcast Generator platform"
requires-python = ">=3.13"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config", "api", "services", "domain", "infrastructure"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["apps.*.admin"]
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = ["celery.*", "django.*", "rest_framework.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["apps", "api", "services", "domain", "infrastructure"]
omit = ["*/migrations/*", "*/tests/*"]
